--- a/test/debug-pages/index.html
+++ b/test/debug-pages/index.html
@@ -5,55 +5,55 @@
 </head>
 <body>
     <h1>Debug Pages</h1>
-    <a href='2762.html'>2762.html</a><br/>
-    <a href='3895.html'>3895.html</a><br/>
-    <a href='7438.html'>7438.html</a><br/>
-    <a href='7517.html'>7517.html</a><br/>
-    <a href='animate.html'>animate.html</a><br/>
-    <a href='bounds.html'>bounds.html</a><br/>
-    <a href='cache_api.html'>cache_api.html</a><br/>
-    <a href='canvas.html'>canvas.html</a><br/>
-    <a href='chinese.html'>chinese.html</a><br/>
-    <a href='circles.html'>circles.html</a><br/>
-    <a href='cluster.html'>cluster.html</a><br/>
-    <a href='color_spaces.html'>color_spaces.html</a><br/>
-    <a href='csp-static.html'>csp-static.html</a><br/>
-    <a href='csp.html'>csp.html</a><br/>
-    <a href='custom3d.html'>custom3d.html</a><br/>
-    <a href='debug.html'>debug.html</a><br/>
-    <a href='default-image.html'>default-image.html</a><br/>
-    <a href='events.html'>events.html</a><br/>
-    <a href='extrusion-query.html'>extrusion-query.html</a><br/>
-    <a href='featurestate.html'>featurestate.html</a><br/>
-    <a href='heatmap.html'>heatmap.html</a><br/>
-    <a href='highlightpoints.html'>highlightpoints.html</a><br/>
-    <a href='hillshade.html'>hillshade.html</a><br/>
-    <a href='iframe-blob.html'>iframe-blob.html</a><br/>
-    <a href='iframe.html'>iframe.html</a><br/>
-    <a href='image.html'>image.html</a><br/>
-    <a href='index.html'>index.html</a><br/>
-    <a href='is-safari.html'>is-safari.html</a><br/>
-    <a href='line-gradient.html'>line-gradient.html</a><br/>
-    <a href='markers.html'>markers.html</a><br/>
-    <a href='mobile_scroll.html'>mobile_scroll.html</a><br/>
-    <a href='multiple.html'>multiple.html</a><br/>
-    <a href='no_wrap.html'>no_wrap.html</a><br/>
-    <a href='popup.html'>popup.html</a><br/>
-    <a href='query_features.html'>query_features.html</a><br/>
-    <a href='raster-streets.html'>raster-streets.html</a><br/>
-    <a href='rtl.html'>rtl.html</a><br/>
-    <a href='satellite.html'>satellite.html</a><br/>
-    <a href='setstyle.html'>setstyle.html</a><br/>
-    <a href='shield-rotation.html'>shield-rotation.html</a><br/>
-    <a href='stretchable.html'>stretchable.html</a><br/>
-    <a href='symbols.html'>symbols.html</a><br/>
-    <a href='terrain.html'>terrain.html</a><br/>
-    <a href='textsize.html'>textsize.html</a><br/>
-    <a href='threejs.html'>threejs.html</a><br/>
-    <a href='tinysdf.html'>tinysdf.html</a><br/>
-    <a href='update_image.html'>update_image.html</a><br/>
-    <a href='variable-anchor-with-icon-text-fit.html'>variable-anchor-with-icon-text-fit.html</a><br/>
-    <a href='video.html'>video.html</a><br/>
-    <a href='wms.html'>wms.html</a><br/>
+    <a href='debug-pages/2762.html'>2762.html</a><br/>
+    <a href='debug-pages/3895.html'>3895.html</a><br/>
+    <a href='debug-pages/7438.html'>7438.html</a><br/>
+    <a href='debug-pages/7517.html'>7517.html</a><br/>
+    <a href='debug-pages/animate.html'>animate.html</a><br/>
+    <a href='debug-pages/bounds.html'>bounds.html</a><br/>
+    <a href='debug-pages/cache_api.html'>cache_api.html</a><br/>
+    <a href='debug-pages/canvas.html'>canvas.html</a><br/>
+    <a href='debug-pages/chinese.html'>chinese.html</a><br/>
+    <a href='debug-pages/circles.html'>circles.html</a><br/>
+    <a href='debug-pages/cluster.html'>cluster.html</a><br/>
+    <a href='debug-pages/color_spaces.html'>color_spaces.html</a><br/>
+    <a href='debug-pages/csp-static.html'>csp-static.html</a><br/>
+    <a href='debug-pages/csp.html'>csp.html</a><br/>
+    <a href='debug-pages/custom3d.html'>custom3d.html</a><br/>
+    <a href='debug-pages/debug.html'>debug.html</a><br/>
+    <a href='debug-pages/default-image.html'>default-image.html</a><br/>
+    <a href='debug-pages/events.html'>events.html</a><br/>
+    <a href='debug-pages/extrusion-query.html'>extrusion-query.html</a><br/>
+    <a href='debug-pages/featurestate.html'>featurestate.html</a><br/>
+    <a href='debug-pages/heatmap.html'>heatmap.html</a><br/>
+    <a href='debug-pages/highlightpoints.html'>highlightpoints.html</a><br/>
+    <a href='debug-pages/hillshade.html'>hillshade.html</a><br/>
+    <a href='debug-pages/iframe-blob.html'>iframe-blob.html</a><br/>
+    <a href='debug-pages/iframe.html'>iframe.html</a><br/>
+    <a href='debug-pages/image.html'>image.html</a><br/>
+    <a href='debug-pages/index.html'>index.html</a><br/>
+    <a href='debug-pages/is-safari.html'>is-safari.html</a><br/>
+    <a href='debug-pages/line-gradient.html'>line-gradient.html</a><br/>
+    <a href='debug-pages/markers.html'>markers.html</a><br/>
+    <a href='debug-pages/mobile_scroll.html'>mobile_scroll.html</a><br/>
+    <a href='debug-pages/multiple.html'>multiple.html</a><br/>
+    <a href='debug-pages/no_wrap.html'>no_wrap.html</a><br/>
+    <a href='debug-pages/popup.html'>popup.html</a><br/>
+    <a href='debug-pages/query_features.html'>query_features.html</a><br/>
+    <a href='debug-pages/raster-streets.html'>raster-streets.html</a><br/>
+    <a href='debug-pages/rtl.html'>rtl.html</a><br/>
+    <a href='debug-pages/satellite.html'>satellite.html</a><br/>
+    <a href='debug-pages/setstyle.html'>setstyle.html</a><br/>
+    <a href='debug-pages/shield-rotation.html'>shield-rotation.html</a><br/>
+    <a href='debug-pages/stretchable.html'>stretchable.html</a><br/>
+    <a href='debug-pages/symbols.html'>symbols.html</a><br/>
+    <a href='debug-pages/terrain.html'>terrain.html</a><br/>
+    <a href='debug-pages/textsize.html'>textsize.html</a><br/>
+    <a href='debug-pages/threejs.html'>threejs.html</a><br/>
+    <a href='debug-pages/tinysdf.html'>tinysdf.html</a><br/>
+    <a href='debug-pages/update_image.html'>update_image.html</a><br/>
+    <a href='debug-pages/variable-anchor-with-icon-text-fit.html'>variable-anchor-with-icon-text-fit.html</a><br/>
+    <a href='debug-pages/video.html'>video.html</a><br/>
+    <a href='debug-pages/wms.html'>wms.html</a><br/>
 </body>
 </html>
